one step closer in the routing direction

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,5 +8,5 @@
   <a routerLinkActive="active" routerLink="employees">Employee Directory</a>
 </div>
 
-
+<!-- <app-tickets></app-tickets> -->
 <router-outlet></router-outlet>
