--- a/src/app/ticket/ticket.component.html
+++ b/src/app/ticket/ticket.component.html
@@ -1,5 +1,5 @@
-<section class="ticket-details" [routerLink]="['/tickets',ticket.id]">
-  <div class="ticket-description">{{ticket.description}}</div>
+<section class="ticket-details">
+  <div class="ticket-description" [routerLink]="['/tickets',ticket.id]">{{ticket.description}}</div>
 
   <input #checkbox class="complete-input" type="checkbox" id="complete-{{ticket.id}}" value="ticket.completed" (click)="completeTicket()">
   <label class="complete-label" for="complete-{{ticket.id}}"></label>
