--- a/src/app/ticket-detail/ticket-detail.component.html
+++ b/src/app/ticket-detail/ticket-detail.component.html
@@ -1,18 +1,18 @@
-<h1>{{ ticket.id }}</h1>
-<!-- <section class="ticket-details">
-  <div class="ticket-description">{{ticket.description}}</div>
+<h2 class="ticket-description"> {{ticket.description}} <i class="ticket-id">({{ ticket.id }})</i></h2>
+
+<section class="ticket-details">
   <div>{{ticket.assigneeId}}</div>
   
   <div class="input-container">
     <label for="ticketUserId">Ticket Assignee Id</label>
-    <select name="ticketUserId" id="ticketUserId" formControl="ticketUserId">
+    <select name="ticketUserId" id="ticketUserId" [formControl]="ticketUserId">
       <option value="">v</option>
       <option *ngFor="let user of users|async" value="user.id">{{user.name}}</option>
     </select>
   
   </div>
 
-  <input #checkbox class="complete-input" type="checkbox" id="complete-{{ticket.id}}" value="ticket.completed" (click)="completeTicket()">
+  <input #checkbox class="complete-input" type="checkbox" id="complete-{{ticket.id}}" value="ticket.completed" (click)="toggleCompletedStatus()">
   <label class="complete-label" for="complete-{{ticket.id}}"></label>
 
-</section> -->
+</section>
