--- a/src/styles.css
+++ b/src/styles.css
@@ -13,3 +13,29 @@ ul {
   list-style-type: none;
   padding: 0;
 }
+
+/* styles for the checkboxs */
+.complete-input {
+  display: none;
+}
+
+.complete-label {
+  width: 20px;
+  height: 20px;
+  border: 1px solid #5a5a5a;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  cursor: pointer;
+}
+
+input:checked ~ label::after {
+  /* our checkmark */
+  display: block;
+  content: '';
+  width: 16px;
+  height: 16px;
+  background-color: #2daf49;
+}
